TEST: async tests suport

--- a/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
@@ -2,65 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9b0efb9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
-    "import asyncio\n",
-    "from functools import lru_cache\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
-    "import httpx\n",
     "import pandas as pd\n",
+    "from httpx import Client, HTTPTransport, Proxy, Timeout, ProxyError\n",
     "\n",
     "load_dotenv(find_dotenv())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ebedf56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_client() -> httpx.AsyncClient:\n",
+    "def create_client() -> Client:\n",
     "    \"\"\"\n",
     "    Creates a common client for future http requests\n",
     "\n",
     "    Returns:\n",
-    "        httpx.Client: client with ford proxies\n",
+    "        Client: client with ford proxies\n",
     "    \"\"\"\n",
-    "    limits = httpx.Limits(max_connections=8)  # test with 8 latter, default 4\n",
-    "    ford_proxy = httpx.Proxy(str(os.getenv(\"FORD_PROXY\")))\n",
+    "    ford_proxy = str(os.getenv(\"FORD_PROXY\"))\n",
+    "    timeout_config = Timeout(30.0)\n",
     "    proxy_mounts = {\n",
-    "        \"http://\": httpx.AsyncHTTPTransport(proxy=ford_proxy, limits=limits, retries=3),\n",
-    "        \"https://\": httpx.AsyncHTTPTransport(\n",
-    "            proxy=ford_proxy, limits=limits, retries=3\n",
-    "        ),\n",
+    "        \"http://\": HTTPTransport(proxy=Proxy(ford_proxy)),\n",
+    "        \"https://\": HTTPTransport(proxy=Proxy(ford_proxy)),\n",
     "    }\n",
-    "    return httpx.AsyncClient(\n",
-    "        timeout=httpx.Timeout(10.0, connect=5.0, pool=4.0),\n",
+    "    return Client(\n",
+    "        timeout=timeout_config,\n",
     "        mounts=proxy_mounts,\n",
-    "        #        verify=False,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a6db2ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        verify=False,\n",
+    "    )\n",
+    "\n",
+    "\n",
     "def get_token():\n",
-    "    with httpx.Client(\n",
-    "        proxies={\n",
-    "            \"http://\": str(os.getenv(\"FORD_PROXY\")),\n",
-    "            \"https://\": str(os.getenv(\"FORD_PROXY\")),\n",
-    "        }\n",
-    "    ) as client:\n",
+    "    with create_client() as client:\n",
     "        response = client.post(\n",
     "            str(os.getenv(\"TOKEN_ENDPOINT\")),\n",
     "            data={\n",
@@ -76,115 +71,279 @@
     "        round(int(response.json()[\"expires_in\"]) / 60, 0),\n",
     "        \"minutes\",\n",
     "    )\n",
-    "    return response.json()[\"access_token\"]\n",
-    "\n",
-    "\n",
-    "def load_categories():\n",
-    "    categories = []\n",
-    "    with open(\n",
-    "        \"../../../../data/external/binnings.txt\", encoding=\"utf-8\", mode=\"r\"\n",
-    "    ) as file:\n",
-    "        for line in file.readlines():\n",
-    "            categories.append(line.strip(\"\\n\").split(\",\")[1])\n",
-    "    return frozenset(categories)\n",
-    "\n",
-    "\n",
-    "token = get_token()"
+    "    return response.json()[\"access_token\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a5a45978",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@lru_cache(maxsize=70)\n",
-    "async def call_api_movement(\n",
-    "    complaint: str, client: httpx.AsyncClient, token: str, semaphore: asyncio.Semaphore\n",
-    "):\n",
-    "    parts = (\n",
-    "        \"door, window, windshield, wiper, glass, hood, trunk, moonroof, \"\n",
-    "        + \"bumper, tail light, pillar, undershield, roof rack, latch, he\"\n",
-    "        + \"adlight, door handle, door keypad, window, weatherstripping, \"\n",
-    "        + \"side mirror, lighting, swing gate, cowl grille, hard top, ski\"\n",
-    "        + \"d plate, sheet metal, running boards, water leak, etc)\"\n",
-    "    )\n",
-    "\n",
-    "    prompt = (\n",
-    "        f\"{complaint}\"\n",
-    "        \"Question 1: For this complaint, check if it is related to an ex\"\n",
-    "        + f\"ternal part of the car, body exterior, ({parts}). If ye\"\n",
-    "\n",
-    "        + \"s, answer 'F8'. Otherwise, answer 'NOT F8'. Note that most of\"\n",
-    "        + \"the problems related to power liftgate electrical problems an\"\n",
-    "        + \"d rear view camera are NOT F8. Question 2: For each of these \"\n",
-    "        + \"sentences that your answer 1 was 'F8', check if it is related\"\n",
-    "        + f\"to only one of the following categories: {list(load_categories())}.\"\n",
-    "        + \" You should give only one answer with one answer for Question\"\n",
-    "        + \" 1 and one answer for Question 2 in the following format: 'AN\"\n",
-    "\n",
-    "        + \"SWER 1~~~ANSWER 2'. Note: 'OWD' means 'opened while driving' \"\n",
-    "        + \"and 'F&F' means 'fit and finish', for problems related to flu\"\n",
-    "        + \"shness and margin. Note 2: For model Escape (2020 forward), t\"\n",
-    "        + \"here is a common problem related to door check arm when the c\"\n",
-    "        + \"omplaint is related to the door making popping sounds, openin\"\n",
-    "        + \"g and closing problens, hinges and welds. If you cannot relat\"\n",
-    "        + \"e, answer NOT SURE. Answer in the correct order. If you canno\"\n",
-    "        + \"t assist, answer 1, and answer 2 must be NA. You should be ob\"\n",
-    "        + \"jective and cold. Never change the answer format mentioned.\"\n",
-    "    )\n",
+    "def call_api_movement(complaint: str, client: Client, token: str):\n",
     "    content = {\n",
     "        \"model\": \"gpt-4\",\n",
     "        \"context\": (\n",
-    "            \"You are a helpful text reader and analyzer. You need to give me 2 answers.\"\n",
+    "            \"You are a helpful text reader and analyzer. Resume this complaint\"\n",
     "        ),  # sets the overall behavior of the assistant.\n",
-    "        \"messages\": [{\"role\": \"user\", \"content\": prompt}],\n",
+    "        \"messages\": [\n",
+    "            {\"role\": \"user\", \"content\": f\"resume the following complaint: {complaint}\"}\n",
+    "        ],\n",
     "        \"parameters\": {\n",
     "            \"temperature\": 0.05,  # Determines the randomnes of the model's response.\n",
     "        },\n",
     "    }\n",
-    "    async with semaphore:\n",
-    "        response = await client.post(\n",
+    "    try:\n",
+    "        response = client.post(\n",
     "            str(os.getenv(\"API_ENDPOINT\")),\n",
     "            headers={\"Authorization\": f\"Bearer {token}\"},\n",
     "            json=content,\n",
-    "            timeout=8,\n",
+    "            timeout=20,\n",
     "        )\n",
+    "        message = response.json()[\"content\"]\n",
+    "        print(message)\n",
+    "        if \"\\n\" in message:\n",
+    "            message = message.split(\"\\n\")[0]\n",
     "\n",
-    "    message = response.json()[\"content\"]\n",
-    "    print(message)\n",
+    "        return message\n",
     "\n",
-    "    if len(parts := message.split(\"~~~\")) == 2:\n",
-    "        function, result = parts\n",
-    "\n",
-    "        if function == \"NOT F8\":\n",
-    "            return [function, \"~\", \"~\"]\n",
-    "\n",
-    "        if function == \"F8\":\n",
-    "            if \"|\" not in result:  # case where recalls is being processed\n",
-    "                return [function, \"~\", result]\n",
-    "            component, failure = result.split(\" | \")\n",
-    "            return [function, component, failure]\n",
-    "\n",
-    "    return [\"NOT CLASSIFIED\", \"~\", \"~\"]"
+    "    except ProxyError as exc:\n",
+    "        print(exc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9388f3f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "503 Service Unavailable\n",
+      "503 Service Unavailable\n",
+      "503 Service Unavailable\n",
+      "503 Service Unavailable\n",
+      "503 Service Unavailable\n",
+      "503 Service Unavailable\n",
+      "503 Service Unavailable\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CMPLID</th>\n",
+       "      <th>ODINO</th>\n",
+       "      <th>MFR_NAME</th>\n",
+       "      <th>MAKETXT</th>\n",
+       "      <th>MODELTXT</th>\n",
+       "      <th>YEARTXT</th>\n",
+       "      <th>CRASH</th>\n",
+       "      <th>FAILDATE</th>\n",
+       "      <th>FIRE</th>\n",
+       "      <th>INJURED</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DEALER_NAME</th>\n",
+       "      <th>DEALER_TEL</th>\n",
+       "      <th>DEALER_CITY</th>\n",
+       "      <th>DEALER_STATE</th>\n",
+       "      <th>DEALER_ZIP</th>\n",
+       "      <th>PROD_TYPE</th>\n",
+       "      <th>REPAIRED_YN</th>\n",
+       "      <th>MEDICAL_ATTN</th>\n",
+       "      <th>VEHICLES_TOWED_YN</th>\n",
+       "      <th>Resume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1971468</td>\n",
+       "      <td>11574310</td>\n",
+       "      <td>Ford Motor Company</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>ESCAPE</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>20240301</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1971476</td>\n",
+       "      <td>11574744</td>\n",
+       "      <td>Ford Motor Company</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>F-150</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>20240223</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1971482</td>\n",
+       "      <td>11573968</td>\n",
+       "      <td>Ford Motor Company</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>F-150</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>20240202</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1971484</td>\n",
+       "      <td>11574317</td>\n",
+       "      <td>Ford Motor Company</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>EDGE</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>20231014</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1971491</td>\n",
+       "      <td>11574914</td>\n",
+       "      <td>Ford Motor Company</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>EXPLORER</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>20231220</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 50 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    CMPLID     ODINO            MFR_NAME MAKETXT  MODELTXT  YEARTXT CRASH  \\\n",
+       "0  1971468  11574310  Ford Motor Company    FORD    ESCAPE   2017.0     N   \n",
+       "1  1971476  11574744  Ford Motor Company    FORD     F-150   2006.0     N   \n",
+       "2  1971482  11573968  Ford Motor Company    FORD     F-150   2018.0     N   \n",
+       "3  1971484  11574317  Ford Motor Company    FORD      EDGE   2019.0     N   \n",
+       "4  1971491  11574914  Ford Motor Company    FORD  EXPLORER   2018.0     N   \n",
+       "\n",
+       "   FAILDATE FIRE  INJURED  ...  DEALER_NAME DEALER_TEL DEALER_CITY  \\\n",
+       "0  20240301    N        0  ...          NaN        NaN         NaN   \n",
+       "1  20240223    N        0  ...          NaN        NaN         NaN   \n",
+       "2  20240202    N        0  ...          NaN        NaN         NaN   \n",
+       "3  20231014    N        0  ...          NaN        NaN         NaN   \n",
+       "4  20231220    N        0  ...          NaN        NaN         NaN   \n",
+       "\n",
+       "  DEALER_STATE DEALER_ZIP  PROD_TYPE  REPAIRED_YN  MEDICAL_ATTN  \\\n",
+       "0          NaN        NaN          V          NaN             N   \n",
+       "1          NaN        NaN          V          NaN             N   \n",
+       "2          NaN        NaN          V          NaN             N   \n",
+       "3          NaN        NaN          V          NaN             N   \n",
+       "4          NaN        NaN          V          NaN             N   \n",
+       "\n",
+       "   VEHICLES_TOWED_YN Resume  \n",
+       "0                  N   None  \n",
+       "1                  N   None  \n",
+       "2                  N   None  \n",
+       "3                  N   None  \n",
+       "4                  N   None  \n",
+       "\n",
+       "[5 rows x 50 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"../../../../data/raw/mock_dataset.csv\")\n",
-    "async with create_client() as client:\n",
-    "    df[[\"FUNCTION_\", \"COMPONET\", \"FAILURE\"]] = await asyncio.gather(\n",
-    "        *(\n",
-    "            call_api_movement(conmplaint, client, token, asyncio.Semaphore(70))\n",
-    "            for conmplaint in df[\"CDESCR\"]\n",
-    "        )\n",
-    "    )\n",
+    "token = get_token()\n",
+    "with create_client() as client:\n",
+    "    df[\"Resume\"] = df[\"CDESCR\"].apply(lambda row: call_api_movement(row, client, token))\n",
+    "\n",
     "df.head()"
    ]
   }
@@ -205,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
