TEST: faster dataset download and vin token generation

--- a/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
@@ -17,12 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "URL = \"https://corp.sts.ford.com/adfs/oauth2/authorize?client_id=urn:gsar:clientid:web:prod&response_type=token+id_token&redirect_uri=https://www.gsar.ford.com/oauth-callback/&resource=urn:gsar:resource:web:prod&client-request-id=f21c9dfe-43eb-4b43-990c-0080035c00df&RedirectToIdentityProvider=AD+AUTHORITY\"\n",
-    "response = httpx.get(URL, follow_redirects=True, timeout=50)"
+    "URL = \"https://corp.sts.ford.com/adfs/oauth2/authorize\"\n",
+    "PARAMS = {\n",
+    "    \"client_id\": \"urn:gsar:clientid:web:prod\",\n",
+    "    \"response_type\": \"token id_token\",\n",
+    "    \"redirect_uri\": \"https://www.gsar.ford.com/oauth-callback/\",\n",
+    "    \"resource\": \"urn:gsar:resource:web:prod\",\n",
+    "    \"client-request-id\": \"7e0748c5-e9d3-4aeb-cd02-0080020000a9\",\n",
+    "    \"RedirectToIdentityProvider\": \"AD AUTHORITY\",\n",
+    "}\n",
+    "DATA = {\n",
+    "    \"UserName\": \"VDUART10@ford.com\",\n",
+    "    \"Password\": \"V02H#eu!321!\",\n",
+    "    \"AuthMethod\": \"FormsAuthentication\",\n",
+    "}\n",
+    "response = httpx.post(URL, params=PARAMS, json=DATA, timeout=50)\n",
+    "response.status_code"
    ]
   },
   {
@@ -63,7 +88,6 @@
     "async def get_info_by_vin(vin: str, client: httpx.AsyncClient, token: str):\n",
     "    keys = [\"prodDate\", \"wersVl\", \"awsVl\", \"globVl\", \"plant\", \"origWarantDate\"]\n",
     "\n",
-    "\n",
     "    retrived = dict.fromkeys(keys, \"\")\n",
     "\n",
     "    if vin and vin[-1] != \"*\" and len(vin) == 17:\n",
@@ -75,11 +99,9 @@
     "            },\n",
     "        )\n",
     "\n",
-    "\n",
     "        data = dict(response.json())\n",
     "        for key in keys:\n",
     "            if key in data:\n",
-    "\n",
     "\n",
     "                retrived[key] = str(data.get(key))\n",
     "\n",
