HOTFIX: sorry for that

--- a/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
@@ -42,8 +42,8 @@
     "    \"RedirectToIdentityProvider\": \"AD AUTHORITY\",\n",
     "}\n",
     "DATA = {\n",
-    "    \"UserName\": \"VDUART10@ford.com\",\n",
-    "    \"Password\": \"V02H#eu!321!\",\n",
+    "    \"UserName\": str(os.getenv(\"GSAR_USERNAME\")),\n",
+    "    \"Password\": str(os.getenv(\"GSAR_PASSWORD\")),\n",
     "    \"AuthMethod\": \"FormsAuthentication\",\n",
     "}\n",
     "response = httpx.post(URL, params=PARAMS, json=DATA, timeout=50)\n",
@@ -87,7 +87,6 @@
    "source": [
     "async def get_info_by_vin(vin: str, client: httpx.AsyncClient, token: str):\n",
     "    keys = [\"prodDate\", \"wersVl\", \"awsVl\", \"globVl\", \"plant\", \"origWarantDate\"]\n",
-    "\n",
     "    retrived = dict.fromkeys(keys, \"\")\n",
     "\n",
     "    if vin and vin[-1] != \"*\" and len(vin) == 17:\n",
@@ -98,7 +97,6 @@
     "                \"Authorization\": f\"Bearer {token}\",\n",
     "            },\n",
     "        )\n",
-    "\n",
     "        data = dict(response.json())\n",
     "        for key in keys:\n",
     "            if key in data:\n",
@@ -146,14 +144,11 @@
     "    \"../../../../data/external/NSCCV-000502-20240304.xlsx\", sheet_name=\"VOQS\"\n",
     ")  # 29750\n",
     "vins_df.dropna(inplace=True)\n",
-    "\n",
     "vins_df = vins_df[\n",
     "    ~vins_df[\"VIN\"].str.endswith(\"*\")\n",
     "    & (vins_df[\"VIN\"] != \"\")\n",
     "    & (vins_df[\"VIN\"] != \"N/A\")\n",
     "]\n",
-    "\n",
-    "\n",
     "vins_df = await collect_vins_info(vins_df)\n",
     "vins_df.head()"
    ]
