--- a/src/pipelines/CompetitiveAnalysis/notebooks/1.0-ExtractDataset.ipynb
+++ b/src/pipelines/CompetitiveAnalysis/notebooks/1.0-ExtractDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "4                    No                  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,6 +295,7 @@
     "        \"COMPLETION_RATE\",\n",
     "    ],\n",
     ")\n",
+    "data.to_csv(\"../../../../data/raw/recalls_mock.csv\", index_label=False)\n",
     "data.head()"
    ]
   }
@@ -315,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
